@@ -1,4 +1,0 @@
-<?php
-class Vpc_Tabs_Admin extends Vpc_Abstract_List_AdminWithEditButton
-{
-}
